MSVINT-13 Afegir LDAP

--- a/providers/component/pom.xml
+++ b/providers/component/pom.xml
@@ -25,9 +25,13 @@
 			<artifactId>sakai-unboundid-provider</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>cat.udl.asic.provider</groupId>
+			<artifactId>sakai-udl-provider</artifactId>
+		</dependency>
+		<!--  <dependency>
 			<groupId>org.sakaiproject</groupId>
 			<artifactId>sakai-jldap-provider</artifactId>
-		</dependency>
+		</dependency>   -->
 		<dependency>
 			<groupId>org.sakaiproject</groupId>
 			<artifactId>sakai-kerberos-provider</artifactId>
