MSVINT-32 Afegida l'eina GradebookNG

--- a/gradebookng/tool/src/java/org/sakaiproject/gradebookng/GradebookNgApplication.properties
+++ b/gradebookng/tool/src/java/org/sakaiproject/gradebookng/GradebookNgApplication.properties
@@ -340,6 +340,7 @@ importExport.export.advancedOption.includeLastLogDate = Course Grade Override Da
 importExport.export.advancedOption.includeCourseGrade = Course Grade
 importExport.export.advancedOption.includeStudentId = Student ID
 importExport.export.advancedOption.includeStudentDisplayId = Student Display ID
+importExport.export.advancedOption.includeDNI = DNI
 importExport.export.advancedOption.includeCalculatedGrade = Calculated Course Grade
 importExport.export.advancedOption.includeGradeOverride = Grade Override
 importExport.export.advancedOption.includeGradeItemScores = Gradebook Item Scores
@@ -348,6 +349,7 @@ importExport.export.advancedOption.includeCategoryAverages = Category Averages
 importExport.export.csv.headers.studentId = Student ID
 importExport.export.csv.headers.studentDisplayId = Student Display ID
 importExport.export.csv.headers.studentName = Name
+importExport.export.csv.headers.DNI = DNI
 importExport.export.csv.headers.points = Total Points
 importExport.export.csv.headers.courseGrade = Course Grade
 importExport.export.csv.headers.calculatedGrade = Calculated Grade
@@ -357,6 +359,7 @@ importExport.export.csv.headers.example.points = Example Assignment With Points
 importExport.export.csv.headers.example.nopoints = Example Assignment With No Points
 importExport.export.csv.headers.example.pointscomments = Example Assignment With Points And Comments
 importExport.export.csv.headers.example.ignore = This column will be ignored
+
 # Student ID and Student Name are not here because they are a special string. 
 # To i18n these, the import helper would need to be made to look for columns by position instead of by column title
 
