MSVINT-29. Específic UdL. Canvis a l'eina Site Manage per adaptar-la a la UdL

--- a/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
+++ b/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
@@ -909,11 +909,23 @@ noterm_class=No rosters listing you as an instructor have been found for the ter
 
 java.couldntlocate = Site with id {0} could not be located. Please ask support to assist you.
 ### Role description ###
-sitegen.roledescription.maintain = Can read, revise, delete and add both content and participants to a site.
-sitegen.roledescription.Instructor = Can read, revise, delete and add both content and participants to a site.
-sitegen.roledescription.access =  Can read content, and add content to a site where appropriate.
-sitegen.roledescription.Student = Can read content, and add content to a site where appropriate.
-sitegen.roledescription.TeachingAssistant =  Can read, add, and revise most content in their sections.
+sitegen.roledescription.Administrador     = Can read, revise, and delete content, edit the site and add participants to it.
+sitegen.roledescription.Baixa             = Without access to the site, identifies previous participants. 
+sitegen.roledescription.Coordinador       = Can read, revise, and delete content, edit the site and add participants to it.
+sitegen.roledescription.Docent            = Can read and revise content.
+sitegen.roledescription.Editor            = Can read and revise content, and edit the site.
+sitegen.roledescription.Estudiant         = Can read content, and add content to a site where appropriate. 
+sitegen.roledescription.Erasmus	 	      = Can read content, and add content to a site where appropriate. (They are students that are enrolled in the course but in other university).
+sitegen.roledescription.Instructor        = Can read, revise, delete and add both content and participants to a site. 
+sitegen.roledescription.Participant       = Can read content, and add content to a site where appropriate. 
+sitegen.roledescription.Professor         = Can read, revise, delete and add both content and participants to a site. 
+sitegen.roledescription.Professorajudant = Can read, add, and revise most content in their sections.
+sitegen.roledescription.Professordepractiques = Can read, add, and revise most content in their sections.
+sitegen.roledescription.Student           = Can read content, and add content to a site where appropriate. 
+sitegen.roledescription.TeachingAssistant = Can read, add, and revise most content in their sections.
+sitegen.roledescription.Convidat = Can read some content but not participate in assignments, forums, messages, etc.
+sitegen.roledescription.Tutor             = Can read and revise content.
+sitegen.roledescription.access            = Can read content, and add content to a site where appropriate. 
 ##Additional site info
 sitegen.siteinfolist.modify = Modification date
 sitegen.siteinfolist.usermodify = Modified by
@@ -1031,6 +1043,47 @@ sinfo.portalneochat.name=Portal Chat
 sinfo.portalneochat.allowForSite=Enable <strong>Portal Chat</strong> in this site.
 sinfo.portalneochat.confirmDisabled=You have disabled the Portal Chat for this site
 sinfo.portalneochat.disabled=Disabled
+
+
+#per als tipus de sites
+site.type.course                          = Course
+site.description.course				   = (Sites where you are able to add official record groups, UdL members and external users) 
+site.type.project                         = Project
+site.description.project = (Collaboration sites that can be created by Instructors or Students where can be added other UdL members. These sites have some restrictions.)
+site.type.projectedocent                  = Learning project
+site.description.projectedocent	  = (Collaboration sites that can be created by Instructors where can be added other UdL Members and external users.)
+
+sitetype.actualnumofprojects             = {0} sites created of {1} allowed  
+sitetype.maxnumofprojects                = The maximum allowed number of Project sites ({0}) has been reached
+
+sitedicla.alert                    = Alert:
+sitedicla.can                      = Cancel
+sitedicla.cancel                   = Cancel
+sitedicla.choose_file              = Choose a file to import
+sitedicla.choose_materials         = Choose material to copy this site.
+sitedicla.class                    = Roster
+sitedicla.copy_materials           = Copy Materials from Other Sites
+sitedicla.copy_message             = You can choose to re-use (copy) materials from other sites that you own.If you choose to import materials from a file, you may only copy materials from one site.All materials are copied, and all dates for such items as schedule entries are not updated.
+sitedicla.copybtn                  = Copy Materials
+sitedicla.copying                  = Copy this existing material...
+sitedicla.edit_roster              = Edit Roster Access for
+sitedicla.edit_roster_announcement =  The latest version of campus virtual allows a better site management of your teaching sites (in wich you have administration rights) and consequently you can select the student groups to have access to the site. You can see a few use cases in which this group management has sense in this help <a href="http://www.ajudacv.udl.cat/en/pdi_pas/ajuda/siteinfo/index.html" target="_blank">section</a>.
+sitedicla.file                     = File
+sitedicla.import                   = Import
+sitedicla.import_materials         = Import Materials From Archive File
+sitedicla.move                     = Move
+sitedicla.move_into                = ...into my current site
+sitedicla.rem                      = Remove
+sitedicla.requested                = (requested)
+sitedicla.tabhol                   = Table holds the information of site classes.
+sitedicla.theis                    = There is no class assigned to the site
+sitedicla.upd                      = Update
+sitedicla.yet                      = yet
+
+sitegen.siteinfolist.deleteClassWarning	  = Are you sure you want to delete this roster? Participans won't have access to the site. If you need more information about how to organize the site, contact with Campus Virtual Support or read the help of campus.  
+
+
+
 
 # table toolbar common messages
 view.label=View
