MSVINT-38 Canvis bundles en eina content

--- a/content/content-bundles/resources/types.properties
+++ b/content/content-bundles/resources/types.properties
@@ -42,7 +42,7 @@ access.role.origin.internal.choice	 = This file is <strong>viewable by all inter
 access.role.origin.internal.fldr		 = This folder and its contents are <strong>viewable by all internal users</strong>.
 
 access.inherited	 = (Inherited)
-access.dropbox		 = Drop Box
+access.dropbox		 = Shared Spaces
 access.dropbox1	 = Visible to instructor and student
 access.group		 = Select group(s)
 access.group1		 = Visible to selected groups: {0}
@@ -304,7 +304,7 @@ text.notext		 = Please enter the contents of your simple text document.
 title.availability		 = Availability 
 title.created		 = Added By
 title.description		 = Description 
-title.dropbox		= {0} Drop Box
+title.dropbox		= {0} Shared Spaces
 title.last			 = Last Modified
 title.name		 = Name 
 title.options		 = Setting options for resources in worksite ''{0}''
@@ -350,15 +350,15 @@ oct = OCT
 nov = NOV
 dec = DEC
 
-receive.confirm.dropbox.email.options = Drop Box Notification Options:
+receive.confirm.dropbox.email.options = Shared Spaces Notification Options:
 receive.confirm.dropbox.email.allow = Allow email notifications to be sent
 receive.confirm.dropbox.email.always = Always send email notifications
 receive.confirm.dropbox.email.none = Do not allow email notifications to be sent
-instr.dropbox.options = Choose whether email notifications should be sent for submissions within this Drop Box
-title.dropbox.options		 = Setting options for Drop Box in worksite ''{0}''
+instr.dropbox.options = Choose whether email notifications should be sent for submissions within this shared space
+title.dropbox.options		 = Setting options for shared space in worksite ''{0}''
 
 # SAK-23350
-dropbox.privacy.note = Files in your Drop Box can only be seen by you and the site maintainers. Other participants cannot access them.
+dropbox.privacy.note = Files in your Shared Space can only be seen by you and the site maintainers. Other participants cannot access them.
 
 group.select.title=toggle select all
 
@@ -568,7 +568,7 @@ dropdown.duration_widget_qualifiers.11.label=Minute
 dropdown.duration_widget_qualifiers.12=second
 dropdown.duration_widget_qualifiers.12.label=Second
 
-multiple.file.upload = Upload files to multiple Drop Box folders
+multiple.file.upload = Upload files to multiple shared spaces folders
 multiple.file.upload.nofileselected = No file selected
 multiple.file.upload.nousersselected = No users selected
 multiple.file.upload.siteusers = Available users
