--- a/content/content-bundles/resources/types.properties
+++ b/content/content-bundles/resources/types.properties
@@ -592,6 +592,8 @@ dragndrop.dictInvalidFileType=You can't upload files of this type.
 dragndrop.dictResponseError=Server responded with {{statusCode}} code.
 dragndrop.dictCancelUpload=Cancel upload
 dragndrop.dictCancelUploadConfirmation=Are you sure you want to cancel this upload?
+dragndrop.dictChangeFilenameMessage= Filename can be changed, but not its extension
+dragndrop.dictEditText= Click to edit
 dragndrop.dictRemoveFile=Remove file
 dragndrop.dictMaxFilesExceeded=You can not upload any more files.
 dragndrop.dictFolderUploadError=Folder upload is not supported by your current browser. Currently, only Chrome 21 or upper allows it.
