MSVINT-37. Específic UdL. Canvis a assignments per a usar Urkund. Inclou canvi a content-review per problema detectat Agost 2020

--- a/assignment/api/src/resources/assignment.properties
+++ b/assignment/api/src/resources/assignment.properties
@@ -247,12 +247,12 @@ gen.thearecur1    = There are currently no assignments at this location.
 gen.thearecur2    = There are currently no submissions at this location.
 gen.theassall4    = This assignment allows submissions using both the text box below and attached documents. Type your submission in the box below and/or use the Browse button or the "select files" button to include other documents. <b>Save frequently while working</b>.
 gen.theassall6    = This assignment allows submissions using the text box below only. Type in your submission. <b>Save frequently while working</b>.
-gen.yoursubwill   = Your submission will be sent to {0} to be reviewed for plagiarism.
+gen.yoursubwill   = Your submission will be sent to a plagiarism tool to be reviewed.
 gen.yoursubwill.indexed = Your submission will be sent to {0} to be reviewed for plagiarism. It will be indexed to be compared against by other submissions.
 gen.thesubswill   = The submissions will be sent to {0} to be reviewed for plagiarism.
 gen.thesubswill.indexed = The submissions will be sent to {0} to be reviewed for plagiarism. They will be indexed to be compared against by other submissions.
 gen.subStudentPreview = This assignment has enabled student preview which allows students to submit as many papers as a draft as they wish. A draft paper report is only visible to the owner of the paper, however instructors will be able to see the number of draft submissions and the report scores of each draft. Also, if there is a due date, the most recent draft will automatically be submitted if the student has no other submissions. Students can submit a draft paper as their final submission at any time within the plagiarism report.
-gen.onlythefoll   = Only the following file types will be accepted: {0}
+gen.onlythefoll   = File types accepted: {0}
 gen.theassinf     = The assignment info
 gen.title         = Title
 gen.view2         = View
@@ -725,11 +725,11 @@ downloadall.note=NOTICE: If you switch between languages in your preferences, fo
 uploadall.folders.yes=Save submissions in separate user folders
 uploadall.folders.no=Save all selected download options in one folder (This CANNOT be loaded back into Assignments)
 
-review.use = Use {0}
+review.use = Use the tool.
 review.switch.ne.1 = {0} is not available for non-electronic submissions.
 review.switch.ne.2 = {0} is not available for non-electronic submissions. "Use Turnitin" has been deselected below.
-review.allow = Allow students to view report
-review.report = Report
+review.allow = Allow students to view the results
+review.report = Plagiarism detection report
 review.report.expand = Expand reports
 review.report.collapse = Collapse reports
 review.report.error.expand=Expand troubleshooting information
@@ -764,7 +764,7 @@ review.exclude.matches.wordmax=Up to a Word Count of:
 review.exclude.matches.percentage=Percentage:
 review.exclude.matches.value_error=A value from 0-100 is required when excluding small matches for Turnitin.
 review.exclude.matches.header=Exclusion options:
-review.file.not.accepted=The file you have tried to upload is not accepted by {0}. Please upload a file that is one of the following types: {1}
+review.file.not.accepted=The instructor has activated content review for this assignment. \nThe file you have tried to upload has a file type NOT ACCEPTED by {0}. Please upload a file that is one of the following types: {1}
 review.advancedSettings.vericite=VeriCite Advanced Settings
 review.eula.agreement=I have read and agree to the following
 review.eula=End User License Agreement
@@ -783,9 +783,9 @@ gen.sorbyreview = Sort by review
 gen.rev = TurnItIn
 review.notavail = Not available yet
 review.viewreport = View Report
-review.title = {0} Plagiarism Service
+review.title = Plagiarism checker tool
 review.noreport = no report
-review.contentReviewIndicator=Originality of submissions will be verified by {0}.
+review.contentReviewIndicator=The plagiarism tool will verify the originality of the submission files.
 review.required=Please enter required information for the {0} Plagiarism Service settings.
 
 ## notification email content
@@ -973,7 +973,7 @@ content_review.errorFromSource = Troubleshooting information: {0}
 
 content_review.error = An unknown error occurred. The originality review for this attachment is not available.
 content_review.error.createAssignment=An error with {0} has occurred while creating this assignment. {1} has saved the assignment in draft mode. Please try posting this assignment again later. {2}
-content_review.note=<div><br /><em>NOTE:</em><ul><li>When submitting attachments, students should only use these file types: {0}.</li><li>Students should always save files with the appropriate extension.</li>{1}</ul></div>
+content_review.note=<div><br /><em>NOTE:</em><ul><li>When submitting attachments, students should only use these file types (WARNING: Files with other types will NOT be attached): {0}.</li><li>Students should always save files with the appropriate extension.</li>{1}</ul></div>
 content_review.accepted.types.delimiter=,
 content_review.accepted.types.lparen=(
 content_review.accepted.types.rparen=)
