Específic UdL - MSVINT-34 Millores missatges SAMIGO
Específic UdL - MSVINT-34 Millores missatges SAMIGO

--- a/samigo/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/AssessmentSettingsMessages.properties
+++ b/samigo/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/AssessmentSettingsMessages.properties
@@ -374,3 +374,11 @@ option_studentpreview=Hide Rubric from student
 grading_rubric=Grading Rubric 
 
 copyToClipboard=Copy to clipboard
+
+# Assessment advice
+assessment_advice_title=ADVICE about assessment navigation and submission:
+assessment_advice_1=Read carefully the assessment first page where settings are shown (time limit (if it has), number of submission allowed, ...)
+assessment_advice_2=Do not open browser tabs or additional windows. Do not access from different browsers. Those actions can cause errors and data loss. 
+assessment_advice_3=Save your work often. Protect yourself from data loss. 
+assessment_advice_title_timed=ADVICE:
+assessment_advice_timed=In timed assessments do not wait until last seconds to submit your assessment. A few seconds delay can provoke you  run out of time to deliver your assessment.
