--- a/samigo/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/DeliveryMessages.properties
+++ b/samigo/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/DeliveryMessages.properties
@@ -306,7 +306,7 @@ submission_info=Submission Information
 mess_inst=Message from the Instructor
 course=Course
 inst=Instructor
-no_time_limit=No Time Limit
+no_time_limit=No Time Limit (Not a timed assessment)
 time_limit=Time Limit
 NoOfTries=No. of Tries
 time_limit_hour=hour
@@ -493,7 +493,7 @@ begin_assessment_msg_no_due=There is no due date for this assessment.
 begin_assessment_msg_timed_w_due_date=Once you click \"Begin Assessment,\" you will have <b>{0} or until {1} whichever is shorter</b> to complete this assessment. It will be <b>submitted at that time</b>, regardless of whether you have answered all the questions.
 begin_assessment_msg_timed_wo_due_date=Once you click \"Begin Assessment,\" you will have <b>{0}</b> to complete this assessment. It will be <b>submitted when that time has expired</b>, regardless of whether you have answered all the questions.
 begin_assessment_msg_timed_continue=You started this assessment on {0}. You will have <b>until {1}</b> to complete this assessment. It will be <b>submitted at that time</b>, regardless of whether you have answered all the questions.
-begin_assessment_msg_no_time_limit=There is no time limit for this assessment.
+begin_assessment_msg_no_time_limit=There is no time limit for this assessment (not a timed assessment).
 begin_assessment_msg_linear=This assessment is <b>linear</b>, which means you will see questions one at a time and you will <b>not be able to go back</b> to a previous question after clicking Next.
 begin_assessment_msg_linear_continue=You will begin where you last left off.
 begin_assessment_msg_unlimited_submission=You can submit this assessment an unlimited number of times.
@@ -599,3 +599,10 @@ multipleTabsWarningDetail=Opening another assessment in a different tab or windo
 # Extra Credit
 extra_credit=Extra Credit
 extra_credit_preview=(Extra Credit)
+
+#Assessment advice
+begin_assessment_advice_title_timed=ADVICE:
+begin_assessment_advice_timed = In timed assessments do not wait until last seconds to submit your assessment. A few seconds delay can provoke you run out of time to deliver your assessment.
+begin_assessment_advice_title=ADVICE about assessment navigation and submission:
+begin_assessment_advice_1 = Do not open browser tabs or additional windows. Do not access from different browsers. Those actions can cause errors and data loss.  
+begin_assessment_advice_2 = Save your work often. Protect yourself from data loss.
