OPDOC01-15 Específic UdL - Canviar el footer de cv per apuntar al nou suport cautic.udl.cat

--- a/portal/portal-impl/impl/src/bundle/sitenav.properties
+++ b/portal/portal-impl/impl/src/bundle/sitenav.properties
@@ -4,7 +4,6 @@ cookie_notice_text = We use cookies to help give you the best experience on our 
 cookie_notice_dismiss = Dismiss
 bread_separator = >
 
-legal_notice = <a href="http://www.udl.cat/ca/legal" target="_blank">Legal notice</a>
 
 log.email  = email
 log.log    = Log In
@@ -88,6 +87,7 @@ site_fav_toggle=Toggle {0} as a favorite site
 sit_manover = Manage Overview
 sit_noscript_message = Sakai works much better when JavaScript is enabled. Please enable JavaScript in your Browser.
 sit_fullscreen_message = Click here to exit full screen mode.
+
 rs_enterRoleSwapWithRole = Enter {0} View
 rs_exitRoleSwapWithRole = Exit View
 rs_viewSiteAs = View Site As:
@@ -216,12 +216,8 @@ pic_changer_upload_error = Error uploading image
 # Footer
 support=Support
 help_center=<a href="http://www.ajudacv.udl.cat" target="_blank">Help center</a>
-teachers=Teachers:
 teachers_technical_support=Teaching support (<a href="mailto:virtual@udl.cat">virtual@udl.cat</a>)
-teachers_technical_problems=<a href="https://cv.udl.cat/portal/site/serveiinformatica/tool-reset/5742f21d-6e09-4c5c-8086-57251e4f6cd1" target="_blank">Technical problems</a>
-students=Students:
-students_technical_support=Technical support (<a href="mailto:virtual@udl.cat">virtual@udl.cat</a>)
-students_user_support=<a href="http://www.ajudacv.udl.cat/ca/localitzacio/" target="_blank">UdL user support locations</a>
+teachers_technical_problems=<a href="https://cautic.udl.cat" target="_blank">Technical problems</a>
 
 powered_by_sakai=<a href="http://sakaiproject.org/" target="_blank">Powered by Sakai</a>
 legal_notice=<a href="http://www.udl.cat/legal.html" target="_blank">Legal notice</a>
