--- a/roster2/bundle/src/bundle/roster.properties
+++ b/roster2/bundle/src/bundle/roster.properties
@@ -62,12 +62,23 @@ roster_spreadsheet_view = List
 profile_email = Email
 profile_picture_alt = Photo of
 
+# Additional info
+additionalInfo_button_text=View special needs
+additionalInfo_modal_title=Special needs of user {0}
+
+# Modal
+roster_modal_close=Close
+
 # Facets
 facet_picture = Photo
 facet_name = Name
 facet_userId = User ID
 facet_user_name_pronunciation = Pronunciation
 facet_userProperties = User Properties
+facet_specialNeeds=Special Needs
+facet_additionalNotes=Notes
+facet_studentNumber=Student Number
+facet_additionalInfo=Additional information
 facet_email = Email
 facet_role = Role
 facet_status = Status
@@ -95,6 +106,7 @@ perm-roster.viewemail = View participant's email
 perm-roster.viewofficialphoto = View participant's official photo
 perm-roster.viewsitevisits = View participant's site visits
 perm-roster.viewuserproperties= View participant's properties
+perm-roster.viewcandidatedetails= View participant's additional information
 
 groups = Group
 roles_label = Role
